--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 
       <div class="right">
         <!--This section is for links to my socials-->
-        <a href="http://github.com" target="_blank" rel="noopener noreferrer">
+        <a href="https://github.com/Itsam93" target="_blank" rel="noopener noreferrer">
           <i class="fa-brands fa-github"></i>
           <span>Github</span>
         </a>
 
-        <a href="http://linkedin.com" target="_blank" rel="noopener noreferrer">
+        <a href="https://www.linkedin.com/in/samuel-oglekwu/" target="_blank" rel="noopener noreferrer">
           <i class="fa-brands fa-linkedin"></i>
           <span>Linkedin</span>
         </a>
@@ -91,14 +91,15 @@
         </div>
       </section>
 
-      <section id="skills" class="skills-section">
-        <!--Section two is my skills-->
+     <section id="skills" class="skills-section">
+        <!-- Skills Section -->
         <h2>My Skills</h2>
         <div class="text">
-          I'm skilled in using HTML, CSS, and JavaScript. My focus is on clean
-          code, great user experiences, and continuous learning in the
-          ever-evolving world of web development.
+          I'm skilled in front-end and back-end web development, with hands-on experience 
+          in building modern, responsive applications. I focus on writing clean, efficient 
+          code, creating seamless user experiences, and deploying projects to production.
         </div>
+
         <div class="cells">
           <div class="cell">
             <img src="images/html-logo.webp" alt="HTML logo" />
@@ -106,23 +107,95 @@
           </div>
 
           <div class="cell">
-            <img src="images/css-logo.webp" alt="CSS Logo" />
+            <img src="images/css-logo.webp" alt="CSS logo" />
             <span>CSS</span>
           </div>
 
           <div class="cell">
-            <img src="images/javascript-logo.webp" alt="Javascript logo" />
-            <span>Javascript</span>
+            <img src="images/javascript-logo.webp" alt="JavaScript logo" />
+            <span>JavaScript</span>
+          </div>
+
+          <div class="cell">
+            <img src="images/react-logo.webp" alt="React logo" />
+            <span>React</span>
+          </div>
+
+          <div class="cell">
+            <img src="images/node-logo.png" alt="Node.js logo" />
+            <span>Node.js</span>
+          </div>
+
+          <div class="cell">
+            <img src="images/mongodb-logo.png" alt="MongoDB logo" />
+            <span>MongoDB</span>
+          </div>
+
+          <div class="cell">
+            <img src="images/github-logo.png" alt="GitHub logo" />
+            <span>GitHub</span>
+          </div>
+
+          <div class="cell">
+            <img src="images/vercel-logo.jpg" alt="Vercel logo" />
+            <span>Vercel</span>
           </div>
         </div>
       </section>
+
+      <section id="projects" class="projects-section">
+        <!-- Projects Section -->
+        <h2>My Projects</h2>
+        <div class="text">
+          Here are some of the projects I've worked on, showcasing my skills in 
+          front-end and back-end web development. Each project highlights different 
+          aspects of my expertise, from responsive design to API integration and deployment.
+        </div>
+
+        <div class="projects-grid">
+          <!-- Project 1 -->
+          <div class="project-card">
+            <img src="images/todo-list-preview.JPG" alt="Project 1 Preview" />
+            <h3>Portfolio Website</h3>
+            <p>A responsive task management app using React, deployed on Vercel.</p>
+            <div class="buttons">
+              <a href="https://my-todo-ochre-kappa.vercel.app/" target="_blank">Live Demo</a>
+              <a href="https://github.com/Itsam93/my-todo" target="_blank">Source Code</a>
+            </div>
+          </div>
+
+          <!-- Project 2 -->
+          <div class="project-card">
+            <img src="images/bible-quiz-preview.JPG" alt="Project 2 Preview" />
+            <h3>Bible Quiz App</h3>
+            <p>A Bible Quiz app using React and TailwindCSS. Deployed on Vercel.</p>
+            <div class="buttons">
+              <a href="https://bible-quiz-app-tawny.vercel.app/" target="_blank">Live Demo</a>
+              <a href="https://github.com/Itsam93/bible-quiz-app" target="_blank">Source Code</a>
+            </div>
+          </div>
+
+          <!-- Project 3 -->
+          <div class="project-card">
+            <img src="images/school-app-preview.JPG" alt="Project 3 Preview" />
+            <h3>School Management System</h3>
+            <p>A modern school management system built with React, integrating a payment gateway and backend API. Deployed on Vercel</p>
+            <div class="buttons">
+              <a href="https://your-live-link.com" target="_blank">Live Demo</a>
+              <a href="https://github.com/your-username/project3" target="_blank">Source Code</a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
 
       <section id="testimony" class="testimony-section">
         <!--Section three is testimony-->
         <h2>Testimony</h2>
         <div class="group">
           <div class="person-details">
-            <img src="images/testimony-headshot.webp" />
+            <img src="images/avatar.webp" />
             <p>Mr. Feez</p>
             <p>Director, Tech Hub Corp</p>
           </div>
