--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
               <span>Testimony</span>
             </a>
 
+            <a href="#projects">
+              <i class="fa-solid fa-book"></i>
+              <span>My Projects</span>
+            </a>
+
             <a href="#contact">
               <i class="fa-solid fa-envelope"></i>
               <span>Contact</span>
