--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
             <h3>School Management System</h3>
             <p>A modern school management system built with React, integrating a payment gateway and backend API. Deployed on Vercel</p>
             <div class="buttons">
-              <a href="https://your-live-link.com" target="_blank">Live Demo</a>
-              <a href="https://github.com/your-username/project3" target="_blank">Source Code</a>
+              <a href="https://school-app-snowy.vercel.app/" target="_blank">Live Demo</a>
+              <a href="https://github.com/Itsam93/school-app" target="_blank">Source Code</a>
             </div>
           </div>
         </div>
