--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
           <div class="project-card">
             <img src="images/school-app-preview.JPG" alt="Project 3 Preview" />
             <h3>School Management System</h3>
-            <p>A modern school management system built with React, integrating a payment gateway and backend API. Deployed on Vercel</p>
+            <p>A modern school management system built with React, Node and MongoDB, integrating a payment gateway and backend API. Deployed on Vercel</p>
             <div class="buttons">
               <a href="https://school-app-snowy.vercel.app/" target="_blank">Live Demo</a>
               <a href="https://github.com/Itsam93/school-app" target="_blank">Source Code</a>
