--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <a href="www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
 
               </div>
-              <a href="Images/SAM CV.pdf" download class="btn btn2">Download CV</a>
+              <a href="Images/SAM CV.pdf" download="SAM_CV.pdf" class="btn btn2">Download CV</a>
           </div>
           <form id="myForm">
             <label for="name">Name</label>
