--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <section class="hero">
         <!--Section one is About Me-->
         <div class="text">
-          <h2>Hi, I'm Samuel 🤞</h2>
+          <h2>Hi, I'm Samuel!</h2>
           <p>
             I'm a passionate Front-End Developer with a keen eye for detail and
             a strong focus on creating clean, responsive, and user-friendly
